--- a/main.CSS
+++ b/main.CSS
@@ -8,7 +8,7 @@ html {
 }
 body {
   min-height: 100%;
-  height: 100%;
+  height: 996px;
   width: 950px;
   text-align: center;
   background-color: none;
