--- a/main.CSS
+++ b/main.CSS
@@ -15,6 +15,14 @@ body {
   margin: 0 auto;
   overflow-x: hidden;
 }
+a {
+  text-decoration: none;
+  color: #000;
+}
+ol,
+ul {
+  list-style: none;
+}
 #header {
   width: 100%;
   height: 35%;
@@ -40,6 +48,14 @@ body {
   height: 30%;
   background-color: brown;
 }
+
+#header div.upperLeftSpace nav ol li {
+  width: 20%;
+  height: 100%;
+  float: left;
+  line-height: 80px;
+}
+
 #header div.mainButton {
   width: 27%;
   height: 70%;
@@ -122,6 +138,9 @@ body {
     width: 100%;
     height: 30%;
     background-color: brown;
+  }
+  #header div.upperLeftSpace nav ol li {
+    line-height: 50px;
   }
   #header div.mainButton {
     width: 100%;
